--- a/nodepropertieswindow.ui
+++ b/nodepropertieswindow.ui
@@ -19,7 +19,7 @@
   <property name="maximumSize">
    <size>
     <width>800</width>
-    <height>16777215</height>
+    <height>600</height>
    </size>
   </property>
   <property name="windowTitle">
