--- a/documentoptionsdialog.ui
+++ b/documentoptionsdialog.ui
@@ -7,8 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>129</height>
+    <height>130</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>400</width>
+    <height>130</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>400</width>
+    <height>130</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Document options</string>
